View is now Ok, icons added

--- a/src/main/java/top/marchand/oxygen/maven/project/support/impl/MavenProjectView.form
+++ b/src/main/java/top/marchand/oxygen/maven/project/support/impl/MavenProjectView.form
@@ -16,8 +16,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jScrollPane1" max="32767" attributes="0"/>
-          <Component id="chkShowTargetDirs" alignment="0" pref="318" max="32767" attributes="0"/>
+          <Component id="jScrollPane1" pref="318" max="32767" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="chkShowTargetDirs" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="lblStatus" max="32767" attributes="0"/>
+          </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -25,7 +29,10 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="jScrollPane1" pref="333" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="chkShowTargetDirs" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="chkShowTargetDirs" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblStatus" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
           </Group>
       </Group>
     </DimensionLayout>
@@ -50,6 +57,16 @@
     <Component class="javax.swing.JCheckBox" name="chkShowTargetDirs">
       <Properties>
         <Property name="text" type="java.lang.String" value="Show target/ dirs"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="chkShowTargetDirsActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="lblStatus">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Lucida Grande" size="13" style="2"/>
+        </Property>
       </Properties>
     </Component>
   </SubComponents>
