dependency-tree loaded

--- a/src/main/java/top/marchand/oxygen/maven/project/support/impl/MavenProjectView.form
+++ b/src/main/java/top/marchand/oxygen/maven/project/support/impl/MavenProjectView.form
@@ -51,6 +51,13 @@
               <Connection code="model" type="code"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="treeMouseClicked"/>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="treeKeyPressed"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new MavenJTree()"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
