--- a/src/main/java/top/marchand/oxygen/maven/project/support/impl/DlgChooseDependencyResource.form
+++ b/src/main/java/top/marchand/oxygen/maven/project/support/impl/DlgChooseDependencyResource.form
@@ -70,6 +70,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="dfFilter">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="dfFilterKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="pbOk">
       <Properties>
@@ -95,6 +98,10 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTree" name="tree">
+          <Properties>
+            <Property name="rootVisible" type="boolean" value="false"/>
+            <Property name="showsRootHandles" type="boolean" value="true"/>
+          </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="treeMouseClicked"/>
           </Events>
