--- a/src/main/resources/top/marchand/oxygen/templates/templates.xml
+++ b/src/main/resources/top/marchand/oxygen/templates/templates.xml
@@ -13,6 +13,12 @@
     <icon>XSpecIcon16.png</icon>
   </template>
   <template>
+    <name>XML Document</name>
+    <file>/top/marchand/oxygen/templates/dtd.xml</file>
+    <extension>xml</extension>
+    <icon>XmlIcon16.png</icon>
+  </template>
+  <template>
     <name>Document Type Definition</name>
     <file>/top/marchand/oxygen/templates/dtd.xml</file>
     <extension>dtd</extension>
